--- a/food site/index.html
+++ b/food site/index.html
@@ -8,35 +8,37 @@
 <body>
   <h1>코딩의 민족</h1>
   <h2>넌 코딩할 때가 제일 이뻐</h2>
+  
+  <div class="store-bigbox">
+    <div class="store">
+      <img src="images/chicken.jpg" height="200px" width="300px">
+      <div class="info">
+        <h3> 코딩에 빠진 닭</h3>
+        <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
+        <a href="#">바로 결제</a>
+      </div>
+    </div>
 
-  <div class="store">
-    <img src="images/chicken.jpg" height="200px" width="300px">
-    <div class="info">
-      <h3> 코딩에 빠진 닭</h3>
+    <div class="store">
+      <img src="images/sushi.jpg" height="200px" width="300px">
+      <h3> 코코 스시</h3>
+      <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
+      <a href="#">바로 결제</a>
+    </div> 
+
+    <div class="store">
+      <img src="images/burger.jpg" height="200px" width="300px">
+      <h3> 코데리아</h3>
+      <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
+      <a href="#">바로 결제</a>
+    </div> 
+
+    <div class="store">
+      <img src="images/bibimbap.jpg" height="200px" width="300px">
+      <h3> 코가네</h3>
       <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
       <a href="#">바로 결제</a>
     </div>
   </div>
-  
-  <div class="store">
-    <img src="images/sushi.jpg" height="200px" width="300px">
-    <h3> 코코 스시</h3>
-    <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
-    <a href="#">바로 결제</a>
-  </div> 
-
-  <div class="store">
-    <img src="images/burger.jpg" height="200px" width="300px">
-    <h3> 코데리아</h3>
-    <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
-    <a href="#">바로 결제</a>
-  </div> 
-
-  <div class="store">
-    <img src="images/bibimbap.jpg" height="200px" width="300px">
-    <h3> 코가네</h3>
-    <p>주머니가 가벼운 당신의 지갑까지 생각한 착한 가격!</p>
-    <a href="#">바로 결제</a>
-  </div> 
 </body>
 </html>
